[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/menus/custom_map_menu.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/default_dynamic_font.tres" type="DynamicFont" id=2]

[node name="custom_map_menu" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -296.0
margin_right = 512.0
margin_bottom = 280.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="VScrollBar" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -192.0
margin_top = -216.0
margin_right = 192.0
margin_bottom = 160.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ItemList"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="map_description" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -448.0
margin_top = 192.0
margin_right = 192.0
margin_bottom = 256.0
custom_fonts/font = ExtResource( 2 )
text = "No map selected."
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="actions_container" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 320.0
margin_top = 192.0
margin_right = 512.0
margin_bottom = 288.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="play" type="Button" parent="actions_container"]
margin_right = 192.0
margin_bottom = 24.0
rect_min_size = Vector2( 0, 24 )
text = "PLAY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="edit" type="Button" parent="actions_container"]
margin_top = 28.0
margin_right = 192.0
margin_bottom = 52.0
rect_min_size = Vector2( 0, 24 )
text = "EDIT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back" type="Button" parent="actions_container"]
margin_top = 56.0
margin_right = 192.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 24 )
text = "BACK"
